test/1.4/errors/T_ESERIALIZE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// Mostly, what we cannot checkpoint is pointers

extern int num;

// Check that we detect this also in statements
method m() {
    /// ERROR ESERIALIZE
    saved void *v_ptr;
    // no error
    saved int i[2];
    /// ERROR ESERIALIZE
    saved int a2[num];
    local int size = 2;
    /// ERROR ESERIALIZE
    saved int a3[size];
}

/// ERROR ESERIALIZE
saved void *v_ptr;

/// ERROR ESERIALIZE
saved int *i_ptr;

typedef void (*f)();
/// ERROR ESERIALIZE
saved f f_ptr;

// TODO: vectors should be serializable
/// WARNING WEXPERIMENTAL
typedef int vect int_vect;
/// ERROR ESERIALIZE
saved int_vect x;

// ESERIALIZE causes the compiler to omit the faulty declarations in further
// analyses; if this didn't happen, function types would cause some sneaky
// crashes.
/// ERROR ESERIALIZE
saved void function(void);

// make sure method is not dead
method init() {
    m();
}
